--- a/problems/probsol3.tex
+++ b/problems/probsol3.tex
@@ -216,7 +216,7 @@ where we have taken $P = \rho c_s^2$. Solving for $\rho$, we have
 \begin{displaymath}
 \rho = \frac{(1.18 c_s^3)^2}{G^3 M_{\rm BE}^2}.
 \end{displaymath}
-Evaluating this for a gas with $\mu=3.9\times 10^{-24}$ g cm$^{-3}$, we have $c_s = \sqrt{k_B T/\mu} = 0.19$ km s$^{-1}$ and $\rho = 9.3\times 10^{-18}$ g cm$^{-3}$. This corresponds to $n_{\rm min} = \rho/\mu =2.4\times 10^6$ molecules cm$^{-3}$.
+Evaluating this for a gas with $\mu=2.3$, we have $c_s = \sqrt{k_B T/\mu m_{\rm H}} = 0.19$ km s$^{-1}$ and $\rho = 9.3\times 10^{-18}$ g cm$^{-3}$. This corresponds to $n_{\rm min} = \rho/\mu  m_{\rm H}=2.4\times 10^6$ molecules cm$^{-3}$.
 
 \item First we want to derive an expression for the fraction of the mass above a given density. For a lognormal mass distribution,
 \begin{displaymath}
