--- a/problems/probset5.tex
+++ b/problems/probset5.tex
@@ -12,7 +12,7 @@ Consider a star of radius $R_*$ and mass $M_*$ with ionizing luminosity $S$ phot
 \item \textbf{The Transition to Grain-Mediated H$_2$ Formation.}\\
 In this problem we will make some rough estimates for how the Universe transitions from H$_2$ formation being mostly by gas-phase processes, as it must in the early Universe where there are no metals, to H$_2$ formation being mostly on grain surfaces. It may be helpful for this problem to review the discussion of H$_2$ formation in Section \ref{ssec:Hchemistry}.
 \begin{enumerate}
-\item As a first simple example, consider atomic gas with a temperature of $100$ K immersed in a background radiation field equal to that of the Milky Way; this radiation field causes photodetachment of H$^-$ at a rate $\zeta_{\rm pd} = 2.4\times 10^{-7}$ s$^{-1}$ per H$^-$. If all H is neutral and free electrons come only from metals, then the free electron density is $n_e \approx x_{\rm C} n_{\rm H} Z$, where $x_{\rm C} \approx 10^{-4}$ is the gas-phase carbon abundance (the dominant source of free electrons) and $Z$ is the metallicity relative to Solar. Similarly, if the dust grain abundance scales linearly with metallicity, the rate coefficient for H$_2$ formation on grains is $R = 3\times 10^{-17} Z$ cm$^3$ s$^{-1}$. Show that, under these assumptions, the rate of H$_2$ formation is always dominated by grain surface processes independent of the metallicity or density.
+\item As a first simple example, consider atomic gas with a temperature of $100$ K immersed in a background radiation field equal to that of the Milky Way; this radiation field causes photodetachment of H$^-$ at a rate $\zeta_{\rm pd} = 2.4\times 10^{-7}$ s$^{-1}$ per H$^-$. If all H is neutral and free electrons come only from metals, then the free electron density is $n_e \approx x_{\rm C} n_{\rm H} Z$, where $x_{\rm C} \approx 10^{-4}$ is the gas-phase carbon abundance (the dominant source of free electrons) and $Z$ is the metallicity relative to Solar. Similarly, if the dust grain abundance scales linearly with metallicity, the rate coefficient for H$_2$ formation on grains is $\mathcal{R} = 3\times 10^{-17} Z$ cm$^3$ s$^{-1}$. Show that, under these assumptions, the rate of H$_2$ formation is always dominated by grain surface processes independent of the metallicity or density.
 \item Now suppose that the ionization fraction of H is non-negligible, and the photodetachment rate is the same as in part (a). Determine the ionization fraction $x$ at which the rates of H$_2$ formation in the gas phase and on grain surfaces become equal. Your answer should depend on the gas density $n_{\rm H}$, temperature $T$, and metallicity $Z$. Plot the solution for $x$ as a function of metallicity for gas at temperature $T=100$ K and density $n_{\rm H} = 1$, $10$, and $100$ cm$^{-3}$.
 \item In part (b), you should have found that, for a given density, there is a critical metallicity above which grain-mediated H$_2$ formation dominates regardless of the ionization fraction (except for the pathological case $x=1$). Solve for this critical metallicity as a function of density, and plot the result for $T = 100$ and $1000$ K.
 \end{enumerate}
@@ -20,23 +20,23 @@ In this problem we will make some rough estimates for how the Universe transitio
 \item {\bf Disk Dispersal by Photoionization.}\\
 Consider a disk around a T Tauri star of mass $M_*$ that produces an ionizing flux $\Phi$ photons s$^{-1}$. The flux ionizes the disk surface and raises the gas temperature to $10^4$ K, leading to a wind leaving the disk surface.
 \begin{enumerate}
-\item Close to the star the ionized gas remains bound due to the star's gravity. Estimate the gravitational radius $r_g$ at which the ionized gas becomes unbound.
-\item Inside $r_g$, we can think of the trapped ionized gas as forming a cloud of characteristic density $n_0$. Assuming this region is roughly in ionization balance, estimate $n_0$.
-\item At $r_g$, a wind begins to flow off the disk surface. Because the ionizing photons are attenuated quickly as one moves away from the star, most of the mass loss comes from radii $\sim r_g$. Make a rough estimate for the mass flux in the wind.
+\item Close to the star the ionized gas remains bound due to the star's gravity. Estimate the gravitational radius $\varpi_g$ at which the ionized gas becomes unbound.
+\item Inside $\varpi_g$, we can think of the trapped ionized gas as forming a cloud of characteristic density $n_0$. Assuming this region is roughly in ionization balance, estimate $n_0$.
+\item At $\varpi_g$, a wind begins to flow off the disk surface. Because the ionizing photons are attenuated quickly as one moves away from the star, most of the mass loss comes from radii $\sim \varpi_g$. Make a rough estimate for the mass flux in the wind.
 \item Evaluate the mass flux numerically for a 1 $\msun$ star with an ionizing flux of $10^{41}$ s$^{-1}$. How long would this take to evaporate a $0.01$ $\msun$ disk around this star? Given the observed lifetimes of T Tauri star disks, are photoionization-induced winds a plausible candidate for the primary disk removal mechanism?
 \end{enumerate}
 
 \item {\bf Aerodynamics of Small Solids in a Disk.}\\
-Consider a solid sphere of radius $s$ and density $\rho_s$, orbiting a star of mass $M$ at a distance $r$. The sphere is embedded in a protoplanetary disk, whose density and temperature where the particle is orbiting are $\rho_d$ and $T$. The gas pressure in the disk varies with distance from the star as $P\propto r^{-n}$.
+Consider a solid sphere of radius $s$ and density $\rho_s$, orbiting a star of mass $M$ at a distance $\varpi$. The sphere is embedded in a protoplanetary disk, whose density and temperature where the particle is orbiting are $\rho_d$ and $T$. The gas pressure in the disk varies with distance from the star as $P\propto \varpi^{-n}$.
 \begin{enumerate}
 \item Because it is partially supported by gas pressure, gas in the disk orbits at a velocity slightly below the Keplerian velocity. Show that the difference between the gas velocity $v_g$ and the Keplerian velocity $v_K$ is
 \begin{displaymath}
-\Delta v = v_K - v_g \approx \frac{n c_s^2}{2v_K},
+\Delta v = v_K - v_g \approx \frac{n c_g^2}{2v_K},
 \end{displaymath}
-where $c_s$ is the isothermal sound speed of the gas. You may assume that the deviation from Keplerian rotation is small.
+where $c_g$ is the isothermal sound speed of the gas. You may assume that the deviation from Keplerian rotation is small.
 \item For a particle so small that the mean free path of gas atoms is $> s$ (which is the case for grains smaller than $\sim 10$ cm), the drag force it experiences as it moves through the gas at a relative velocity $v$ is
 \begin{displaymath}
-F_D = \frac{4\pi}{3} s^2 \rho_d v c_s.
+F_D = \frac{4\pi}{3} s^2 \rho_d v c_g.
 \end{displaymath}
 This is called the Epstein drag law. We define the stopping time $t_s$ as the ratio of the particle's momentum to $F_D$; this is the time required to reduce the particle velocity by one $e$-folding. Compute $t_s$ for a particle governed by Epstein drag.
 \item For small particles $t_s$ is much less than orbital period of a particle rotating at the Keplerian speed. In this case drag will force the particle's orbital velocity to match the sub-Keplerian orbital velocity of the gas, and since the particle is not supported by pressure as the disk is, it will drift inward. Estimate the equilibrium drift velocity, and the time required for the particle to drift into the star.
