More minor fixes.

--- a/problems/probset1.tex
+++ b/problems/probset1.tex
@@ -5,8 +5,8 @@
 \item \textbf{Molecular Tracers.}\\
 Here we will derive a definition of the critical density, and use it to compute some critical densities for important molecular transitions. For the purposes of this problem, you will need to know some basic parameters (such as energy levels and Einstein coefficients) of common interstellar molecules. You can obtain these from the Leiden Atomic and Molecular Database (LAMDA, \url{http://www.strw.leidenuniv.nl/~moldata}). It is also worth taking a quick look through the associated paper \citep{schoier05a}\footnote{\href{http://adsabs.harvard.edu/abs/2005A\%26A...432..369S}{Sch\"{o}ier {\it et.~al}, 2005, A\&A, 432, 369}} so you get a feel for where these numbers come from.
 \begin{enumerate}
-\item Consider an excited state $i$ of some molecule, and let $A_{ij}$ and $k_{ij}$ be the Einstein $A$ coefficient and the collision rate, respectively, for transitions from state $i$ to state $j$. Write down expressions for the rates of radiative and collisional de-excitations out of state $i$ in a gas where the number density of collision partners is $n$.
-\item We define the critical density $n_{\rm crit}$ of a state as the density for which the radiative and collisional de-excitation rates are equal.\footnote{There is some ambiguity in this definition. Some people define the critical density as the density for which the rate of radiative de-excitation equals the rate of {\it all} collisional transitions out of a state, not just the rate of collisional de-excitations out of it. In practice this usually makes little difference.} Using your answer to the previous part, derive an expression for $n_{\rm crit}$ in terms of the Einstein coefficient and collision rates for the state. 
+\item Consider an excited state $i$ of some molecule, and let $A_{ij}$ and $k_{ij}$ be the Einstein $A$ coefficient and the collision rate, respectively, for transitions from state $i$ to state $j$. Write down expressions for the rates of spontaneous radiative and collisional de-excitations out of state $i$ in a gas where the number density of collision partners is $n$.
+\item We define the critical density $n_{\rm crit}$ of a state as the density for which the spontaneous radiative and collisional de-excitation rates are equal.\footnote{There is some ambiguity in this definition. Some people define the critical density as the density for which the rate of radiative de-excitation equals the rate of {\it all} collisional transitions out of a state, not just the rate of collisional de-excitations out of it. In practice this usually makes little difference.} Using your answer to the previous part, derive an expression for $n_{\rm crit}$ in terms of the Einstein coefficient and collision rates for the state. 
 \item When a state has a single downward transition that is far more common than any other one, as is the case for example for the rotational excitation levels of CO, it is common to refer to the critical density of the upper state of the transition as the critical density of the line. Compute critical densities for the following lines: CO $J=1\rightarrow 0$, CO $J=3\rightarrow 2$, CO $J=5\rightarrow 4$, and HCN $J=1\rightarrow 0$, using H$_2$ as a collision partner. Perform your calculation for the most common isotopes: $^{12}$C, $^{16}$O, and $^{14}$N. Assume the gas temperature is 10 K, the H$_2$ molecules are all para-H$_2$, and neglect hyperfine splitting.
 \item Consider a molecular cloud in which the volume-averaged density is $n=100$ cm$^{-3}$. Assuming the cloud has a lognormal density distribution as given by equation (\ref{eq:denpdf}), with a dispersion $\sigma_s^2 = 5.0$, compute the fraction of the cloud mass that is denser than the critical density for each of these transitions. Which transitions are good tracers of the bulk of the mass in a cloud? Which are good tracers of the denser, and thus presumably more actively star-forming, parts of the cloud?
 \end{enumerate} 
