More typo fixes.

--- a/problems/probsol1.tex
+++ b/problems/probsol1.tex
@@ -19,7 +19,7 @@ The collisional de-excitation rate is
 \begin{displaymath}
  n_i \sum_{j<i} A_{ij} = n_{\rm crit} n_i \sum_{j<i} k_{ij} 
  \qquad \Longrightarrow \qquad
- n_{\rm crit} = \frac{\sum_{i<j} A_{ij}}{\sum_{i<j} k_{ij}}.
+ n_{\rm crit} = \frac{\sum_{j<i} A_{ij}}{\sum_{i<j} k_{ij}}.
  \end{displaymath}
  
 \item
