Typo fixes continue.

--- a/problems/probsol1.tex
+++ b/problems/probsol1.tex
@@ -19,11 +19,11 @@ The collisional de-excitation rate is
 \begin{displaymath}
  n_i \sum_{j<i} A_{ij} = n_{\rm crit} n_i \sum_{j<i} k_{ij} 
  \qquad \Longrightarrow \qquad
- n_{\rm crit} = \frac{\sum_{j<i} A_{ij}}{\sum_{i<j} k_{ij}}.
+ n_{\rm crit} = \frac{\sum_{j<i} A_{ij}}{\sum_{j<i} k_{ij}}.
  \end{displaymath}
  
 \item
-Using numbers taken from the \href{http://www.strw.leidenuniv.nl/~moldata}{LAMBDA} website for the $A_{ij}$ and $\gamma_{ij}$ values, we have
+Using numbers taken from the \href{http://www.strw.leidenuniv.nl/~moldata}{LAMBDA} website for the $A_{ij}$ and $k_{ij}$ values, we have
 \begin{center}
 \begin{tabular}{c|c}
 Line & $n_{\rm crit}$ [cm$^{-3}$] \\ \hline
