Cleaning up a derivation, adding a footnote to a solution set regarding updated to LAMDA.

--- a/problems/probsol1.tex
+++ b/problems/probsol1.tex
@@ -23,13 +23,17 @@ The collisional de-excitation rate is
  \end{displaymath}
  
 \item
-Using numbers taken from the \href{http://www.strw.leidenuniv.nl/~moldata}{LAMBDA} website for the $A_{ij}$ and $k_{ij}$ values, we have
+Using numbers taken from the \href{http://www.strw.leidenuniv.nl/~moldata}{LAMBDA} website\footnote{Collision rates are
+sufficiently uncertain that the rate coefficients listed in the
+database are periodically updated at new calculations or experiments
+are performed. The numerical values given here were computed using
+collision rate coefficients retrieved on 10 August 2016.} for the $A_{ij}$ and $k_{ij}$ values, we have
 \begin{center}
 \begin{tabular}{c|c}
 Line & $n_{\rm crit}$ [cm$^{-3}$] \\ \hline
 CO($J=1\rightarrow 0$) & $2.2\times 10^3$ \\
 CO($J=3\rightarrow 2$) & $1.9 \times 10^4$ \\
-CO($J=5\rightarrow 4$) & $7.6\times 10^4$ \\
+CO($J=5\rightarrow 4$) & $7.8\times 10^4$ \\
 HCN($J=1\rightarrow 0$) & $1.0\times 10^6$
 \end{tabular}
 \end{center}
