Fixed a missing problem title in solutions 2.

--- a/problems/probsol2.tex
+++ b/problems/probsol2.tex
@@ -179,6 +179,8 @@ At $T = 10$ K, a gas with $\mu=3.9\times 10^{-24}$ g has a sound speed $c_s = 0.
 
 \end{enumerate}
 
+\item \textbf{Driving Turbulence with Protostellar Outflows.}
+
 \begin{enumerate}
 
 \item The escape speed at the stellar surface, and thus the launch velocity of the wind, is $v_w = \sqrt{2G M_*(t)/R_*}$, where $M_*(t)$ is the star's instantaneous mass. The momentum flux associated with the wind is therefore $\dot{p}_w = f \dot{M}_d v_w$. The accretion rate onto the star is $\dot{M}_* = (1-f) \dot{M}_d$. Thus at a time $t$ after the star has started accreting, we have $M_*(t) = (1-f) \dot{M}_d t$, and
@@ -243,6 +245,8 @@ f = \frac{t_{\rm ff}}{t_*} = 0.13 \left(\frac{L}{L_1}\right)^{1/2}.
 Evaluating for $L = 1$, $10$, and $100$ pc, we get $f = 0.13$, $0.42$, and $1.3$, respectively. We therefore conclude that protostellar outflows may be a significant factor in the driving the turbulence on $\sim 1$ pc scales, and cannot be ignored there. However, they become increasingly less effective at larger size scales, and can probably be neglected at the scales of entire GMCs, $\sim 10-100$ pc.
 
 \end{enumerate}
+
+\item \textbf{Magnetic Support of Clouds.}
 
 \begin{enumerate}
 
