--- a/problems/probsol1.tex
+++ b/problems/probsol1.tex
@@ -25,7 +25,7 @@ The collisional de-excitation rate is
 \item
 Using numbers taken from the \href{http://www.strw.leidenuniv.nl/~moldata}{LAMBDA} website\footnote{Collision rates are
 sufficiently uncertain that the rate coefficients listed in the
-database are periodically updated at new calculations or experiments
+database are periodically updated as new calculations or experiments
 are performed. The numerical values given here were computed using
 collision rate coefficients retrieved on 10 August 2016.} for the $A_{ij}$ and $k_{ij}$ values, we have
 \begin{center}
